// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/RadioGroup/RadioGroup Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rc:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rb:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rc:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rd:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rb:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rd:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:re:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rb:"
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:re:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:ra:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup VariantHorizontal smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK  RadioGroup_radioGroupItemContainer_horizontal__CuruZ">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rh:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rg:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rh:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:ri:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rg:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:ri:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rj:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rg:"
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rj:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:rf:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset id="htmlId"
            class="RadioGroup_radioGroup__CZc2h dummyClassname"
            lang="nb"
            data-testid="123ID"
  >
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r7:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r6:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r7:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r8:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r6:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r8:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r9:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r6:"
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r9:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r5:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r10:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rv:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r10:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r11:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rv:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r11:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r12:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rv:"
               value="annet"
               checked
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r12:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:ru:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithDisabled play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h "
            disabled
  >
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r15:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r14:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r15:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r16:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r14:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r16:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r17:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r14:"
               value="annet"
               checked
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r17:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r13:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1u:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1t:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1u:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1v:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1t:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1v:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r20:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1t:"
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r20:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r1s:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithErrorMessageAndHasError play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK RadioGroup_radioGroupItemContainer_error__H4RFd">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r23:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r22:"
               aria-describedby="radioErrorId-:r21:"
               aria-invalid="true"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r23:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r24:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r22:"
               aria-describedby="radioErrorId-:r21:"
               aria-invalid="true"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r24:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r25:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r22:"
               aria-describedby="radioErrorId-:r21:"
               aria-invalid="true"
               value="annet"
               checked
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r25:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r21:"
         aria-live="assertive"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Feilmelding
        </p>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r2d:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r2c:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r2d:"
        >
          Radio har blitt klikket på
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r2b:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithHasErrorAndAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK RadioGroup_radioGroupItemContainer_error__H4RFd">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r29:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r28:"
               aria-describedby="konsumentId radioErrorId-:r27:"
               aria-invalid="true"
               value
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r29:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r27:"
         aria-live="assertive"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Feilmelding
        </p>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithHideLegend play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H RadioGroup_srOnly__a0T+C">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rm:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rl:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rm:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rn:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rl:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rn:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:ro:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rl:"
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:ro:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:rk:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithName play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1p:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="nameFraKonsument"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1p:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1q:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="nameFraKonsument"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1q:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1r:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="nameFraKonsument"
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1r:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r1n:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h "
            id="dummyIdForwardedFromRef"
  >
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r2:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r2:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r3:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r3:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r4:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1:"
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r4:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r0:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequired play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1a:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r19:"
               required
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1a:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1b:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r19:"
               required
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1b:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1c:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r19:"
               required
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1c:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r18:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H  RadioGroup_radioGroupLegend_required__ivZwy">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1f:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1e:"
               required
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1f:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1g:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1e:"
               required
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1g:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1h:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1e:"
               required
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1h:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r1d:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequiredAndMarkAndLegendAsMarkup smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H  RadioGroup_radioGroupLegendAsMarkup_required__ZcMXb">
      <h4 class="Heading_heading__7K0um Heading_heading_level3__T5BVI  ">
        Type virksomhet
      </h4>
      <span>
        Med virksomhet så menes bla bla
      </span>
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1k:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1j:"
               required
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1k:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1l:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1j:"
               required
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1l:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:r1m:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:r1j:"
               required
               value="annet"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:r1m:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:r1i:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithSelectedValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="RadioGroup_radioGroup__CZc2h ">
    <legend class="RadioGroup_radioGroupLegend__yNB2H">
      Type virksomhet
    </legend>
    <div class="RadioGroup_radioGroupItemContainer__AINZK">
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rr:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rq:"
               value="foretak"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rr:"
        >
          Enkeltpersonsforetak
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rs:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rq:"
               value="selskap"
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rs:"
        >
          Aksjeselskap
        </label>
      </div>
      <div class="Radio_radio__Fh+3R">
        <input id="radioInputId-:rt:"
               class="Radio_radioInput__gTlv0"
               type="radio"
               name="radioInputName-:rq:"
               value="annet"
               checked
        >
        <label class="Radio_radioLabel__lJQhF"
               for="radioInputId-:rt:"
        >
          Annet
        </label>
      </div>
    </div>
    <div id="radioErrorId-:rp:"
         aria-live="assertive"
    >
    </div>
  </fieldset>
</div>
`;
